syntax = "proto3";
package customer;
option go_package = "customer";

service CustomerService {
	rpc add (CustomerAddRequest) returns (CustomerAddResponse) {}
}

message CustomerAddRequest {
	int64 id  = 1;
	string name = 2;
}

message CustomerAddResponse {
	int64 CustomerId = 1;
}